--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 body {
   --white: #ffffff;
   --blue: #292f36;
+  --black:#000000;
   --grey: #4d5053;
   --lightwhite: #f4f0ec;
   --orange: rgb(205, 162, 116);
@@ -46,6 +47,10 @@ h6 {
   line-height: 125%;
 }
 
+
+
+
+
 .row {
   display: flex;
 }
@@ -74,6 +79,7 @@ h6 {
     margin-left: 8px;
     width: 100px;
     height: 100px;
+    background-color: transparent;
 }  
 .both-circle{
     display: flex;
@@ -86,7 +92,6 @@ h6 {
 
 .hero{
     background-image: url("https://www.home-designing.com/wp-content/uploads/2018/05/best-white-paint-for-interior-walls.jpg");
-
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 0 0 0 25%;
@@ -98,16 +103,19 @@ h6 {
     padding: 2rem 0;
 }
 .hero-content{
-    max-width: 550px;
+max-width: 600px;
 }
 h1{
-    font-size: clamp(2rem,7.5vw,5rem);
+  font-weight: 600;
+  color: var(--black);
 
+    font-size: clamp(2rem,7.5vw,5rem);
 }
 p{
+  font-weight: 600;
     font-size: clamp(0.8rem,5vw,1.375rem);
     line-height: 125%;
-    color: var(--grey);
+    color: var(--black);
 }
 .hero-content p,.cards div p ,.contact-content h2+p {
     margin: 1.5rem auto ;
@@ -146,14 +154,19 @@ p{
 }
 
 .cards,.project{
-    padding: 4rem 0;
+    padding: 3rem 0;
 }
 
 .cards div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
     text-align: center;
-    border: 1px solid var(--lightwhite);
+    border: 1px solid var(--grey);
     padding: 2rem;
     border-radius: 25px;
+    text-wrap: wrap;
 
 }
 h4{
@@ -203,6 +216,21 @@ h2{
     stroke: var(--lightwhite);
 
 }
+.contact-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-wrap: wrap;
+}
+
+.contact-content p{
+  /* width: auto; */
+  text-wrap: wrap;
+  /* text-wrap: nowrap; */
+/* text-wrap: balance; */
+/* text-wrap: pretty; */
+/* text-wrap: stable; */
+}
 .details p {
     text-transform: capitalize;
     margin-top: 0.25px;
@@ -239,6 +267,9 @@ background-color: var(--orange);
 background-color: var(--white);
 padding: 2rem;
 border-radius: 25px;
+}
+.swiper-slide p{
+  text-wrap: stable;  
 }
 
 .profile {
@@ -601,6 +632,7 @@ h3{
          max-width: 1160px;
     }
     
+    
     .logos{
       justify-content: center;
   
@@ -617,7 +649,6 @@ ul{
   list-style: none;
 }
 .header{
-  background-color: var(--black);
   box-shadow: 1px 1px 5px 0px var(--gray);
   position: sticky;
   top: 0;
@@ -709,6 +740,8 @@ ul{
 
 
 @media (min-width: 768px) {
+
+
   .nav{
       max-height: none;
       top: 0;
